css/less/cards/roomscore.less
/* RoomScore card
*******************************************************************************/

@gutter-size: 1.5em;

.card--roomscore {
  display: flex;
  flex-direction: column;
  font-family: 'ratio-display', 'Helvetica Neue', 'Helvetica', sans-serif;
  text-shadow: 0 1px 1px rgba(0,0,0,0.6);

  // Common styles
  .content {
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }
  .content--thanks,
  .content--help,
  .content--hostile {
    display: none;
  }
  .branding,
  .target,
  .message,
  .footer {
    position: relative;
  }
  .branding {
    height: 2.15em;
    background: url(../../../images/wood.jpg) no-repeat center center;
    background-size: cover;
    text-align: center;
    border-bottom: 1px solid #331e0e;
    z-index: 2;

    img {
      position: relative;
      top: 0.35em;
      width: 8em;
      opacity: 0.65;
    }
  }
  .main {
    display: flex;
    flex-direction: row;
    justify-content: center;
    flex: 1 1 auto;
    padding: (@gutter-size * 0.75) @gutter-size;

    .target,
    .message {
      text-align: center;
      z-index: 2;
    }
    .target {
      position: relative;
      flex: 0 0 auto;
      width: 33.3333%;
      margin-right: @gutter-size / 10;

      .photo {
        .fill-parent(0);
        background-position: center center;
        background-repeat: no-repeat;
        background-size: cover;
        border: 5px solid #fff;
        border-radius: 0.5em;
        transform: rotate(-3deg);
        box-shadow: 0 4px 30px rgba(0,0,0,0.5);
        z-index: 0;
      }
      .grade {
        position: absolute;
        left: -4em;
        bottom: -4.5em;
        width: 13em;
        transform: rotate(-6deg);
        z-index: 1;
      }
    }
    .message {
      display: flex;
      flex-direction: column;
      margin-left: @gutter-size / 10;

      .greeting,
      .signature {
        flex: 0 0 auto;
      }
      .greeting {
        font-size: 1.75em;

        .name {
          font-weight: 600;
        }
      }
      .body {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        flex: 1 1 auto;
        padding: 1.25em 1.5em 0.5em 1.5em;

        .grade {
          width: 1.25em;
          margin: 0 0.25em;
        }
        .intro,
        .closing {
          display: flex;
          flex-direction: row;
          justify-content: center;
          align-items: center;
          font-size: 2.25em;
        }
        .location {
          margin: 0.15em 0;
          padding: 0 0.75em;
          font-size: 2.75em;
          font-weight: 600;
          color: #fff;
          border-radius: 1em;
        }
      }
      .signature {
        display: flex;
        flex-direction: row;
        justify-content: center;
        align-items: center;

        .photo {
          width: 4.75em;
          height: 4.75em;
          margin-right: 1em;
          background-position: center center;
          background-repeat: no-repeat;
          border: 3px solid #fff;
          background-size: cover;
          box-shadow: 0 4px 10px rgba(0,0,0,0.5);
          border-radius: 0.35em;
        }
        .user {
          position: relative;
          top: 0.5em;

          .name {
            font-size: 1.5em;
            font-weight: 600;
          }
          .location {
            font-size: 1.25em;
          }
        }
      }
    }
  }
  .footer {
    flex: 0 0 auto;
    padding: @gutter-size / 3 @gutter-size;
    text-align: right;
    background: url(../../../images/wood.jpg) no-repeat center center;
    background-size: cover;
    color: rgba(255,255,255,0.65);
    border-top: 1px solid #331e0e;
    z-index: 1;
  }
  .background {
    .fill-parent(0);
    background-image: url(../../../images/wood.jpg);
    background-position: center center;
    background-repeat: no-repeat;
    background-size: cover;
    opacity: 0.45;
    z-index: 0;

    .highlight {
      position: absolute;
      width: 100%;
      top: 6em;
      height: 11.5em;
      border-top: 1px solid rgba(255,255,255,0.7);
      border-bottom: 1px solid rgba(0,0,0,0.4);
      background: rgba(255,255,255,0.75);
    }
  }

  // Tone-specific styles
  &.tone--thanks {
    .content--thanks {
      display: flex;
    }
    .greeting {
      .name {
        color: @color--thanks;
      }
    }
    .body {
      .location {
        background: @color--thanks;
      }
    }
    .signature {
      .user {
        .name {
          color: @color--thanks;
        }
      }
    }
  }
  &.tone--help {
    .content--help {
      display: flex;
    }
    .greeting {
      .name {
        color: @color--help;
      }
    }
    .body {
      .location {
        background: @color--help;
      }
    }
    .signature {
      .user {
        .name {
          color: @color--help;
        }
      }
    }
  }
  &.tone--hostile {
    .content--hostile {
      display: flex;
    }
    .target {
      margin-right: 0;
      margin-left: @gutter-size / 10;

      .photo {
        transform: rotate(3deg);
      }
      .grade {
        position: absolute;
        left: auto;
        right: -4em;
        transform: rotate(6deg);
      }
    }
    .message {
      order: -1;
      margin-left: 0;
      margin-right: @gutter-size / 10;
    }
    .greeting {
      .name {
        color: lighten(@color--hostile, 5%);
      }
    }
    .body {
      .location {
        background: @color--hostile;
      }
    }
    .signature {
      .user {
        .name {
          color: lighten(@color--hostile, 5%);
        }
      }
    }
    .footer {
      text-align: left;
    }
  }
}

